IGNITE-16707 Improve binary viewcoverage + fix TODOs.